--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageViewPoster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/content_desc_movie_poster"
         android:scaleType="centerCrop" />
 
     <View
@@ -24,10 +25,10 @@
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:minLines="1"
+        android:padding="8dp"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewPoster"
         app:layout_constraintEnd_toEndOf="parent"
