--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerViewMovies"
+    android:id="@+id/swipeRefreshMovies"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="net.epictimes.nanodegreepopularmovies.features.list.ListActivity" />
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewMovies"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="net.epictimes.nanodegreepopularmovies.features.list.ListActivity" />
+
+</android.support.v4.widget.SwipeRefreshLayout>
